# GIC-Cinema-Booking

./: README.md  pyproject.toml
resources/: config.py
src/: cinema.py  gic_cinemas.db  main.py
src/db/: database.py
src/utils/: display.py  helpers.py  seating.py
tests/: test_helpers.py
